--- a/index.html
+++ b/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<!-- Metas -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!-- General -->
 	<title>Frontend Mentor | Interactive rating component</title>
 	<link rel="shortcut icon" sizes="32x32" href="./assets/images/favicon-32x32.png">
 	<link rel="stylesheet" href="./assets/style.css">
-	
 </head>
-
 <body>
-	<div class="card not-submitted">
-		<div class="icon">
-			<img src="./assets/images/icon-star.svg" alt="Star icon">
-		</div>
-		<h3>How did we do?</h3>
-		
-		<p>
-			Please let us know how we did with your
-			support request. All feedback is appreciated
-			to help us improve our offering!
-		</p>
-
-		<ul>
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul>
-
-		<button> Submit </button>
-
-	</div>
-
-	<div class="card submitted hidden">
-		<img src="./assets/images/illustration-thank-you.svg" alt="Credit Card Machine Illustration">
-		<p class="rating">You selected <span id="rate">-</span></span> out of 5</p>
-
-		<h3>Thank you!</h3>
-		
-		<p>
-			We appreciate you taking the time to give a
-			rating. If you ever need more support, don't
-			hesitate to get in touch!
-		</p>
-	</div>
-
+	<!-- Main Container -->
+	<main>
+		<div class="card not-submitted">
+			<div class="icon">
+				<img src="./assets/images/icon-star.svg" alt="Star icon">
+			</div>
+			<h1>How did we do?</h1>
+			
+			<p>
+				Please let us know how we did with your
+				support request. All feedback is appreciated
+				to help us improve our offering!
+			</p>
 	
+			<ul>
+				<li>1</li>
+				<li>2</li>
+				<li>3</li>
+				<li>4</li>
+				<li>5</li>
+			</ul>
+	
+			<button> Submit </button>
+	
+		</div>
+	
+		<div class="card submitted hidden">
+			<img src="./assets/images/illustration-thank-you.svg" alt="Credit Card Machine Illustration">
+			<p class="rating">You selected <span id="rate">-</span></span> out of 5</p>
+	
+			<h1>Thank you!</h1>
+			
+			<p>
+				We appreciate you taking the time to give a
+				rating. If you ever need more support, don't
+				hesitate to get in touch!
+			</p>
+		</div>
+	</main>
 
-	<div class="attribution">
+	<!-- Attribution Card -->
+	<footer>
 		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-	</div>
+	</footer>
 
 	<!-- Script -->
 	<script src="./assets/app.js"></script>
