--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<!-- Attribution Card -->
 	<footer>
-		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> and coded by <a href="https://github.com/edwardribas" target="_blank">Ribas</a>.</p>
 	</footer>
 
 	<!-- Script -->
